--- a/install
+++ b/install
@@ -18,8 +18,7 @@ cp -r ./backgrounds/ $HOME/files/pictures/
 
 # Sending .otherfiles to specific locations
 sudo cp $HOME/.config/.otherfiles/sudoers /etc/sudoers
-# Change font-size dir in urxvt conf
-cp $HOME/.config/.otherfiles/font-size $HOME/.urxvt/ext/font-size
+# Send Sweet-cursors theme to defaults icons folder
 sudo cp -r $HOME/.config/.otherfiles/Sweet-cursors /usr/share/icons/
 
 # Symbolic link xinitrc
@@ -27,7 +26,6 @@ ln -sf $HOME/.config/X11/xinitrc $HOME/.xinitrc
 
 # Symbolic link the zshrc files
 ln -sf $HOME/.config/zsh/zshrc $HOME/.zshrc
-# ln -sf $HOME/.config/zsh/zcompdump $HOME/.zcompdump
 sudo chsh -s /bin/zsh
 
 # Recompile everything in suckelessutils/
