--- a/install
+++ b/install
@@ -6,7 +6,7 @@ echo -e "AutoRiceVoidDesktopLinux\n<>  <>  <>\n<>  <>  <>\n<>  <>  <>"
 sudo xbps-install -Syu
 
 # Install packages I like
-sudo xbps-install -Sy alsa-utils base-devel base-system curl dmenu feh firefox font-awesome font-inconsolata-otf giflib-devel git github-cli grub htop imlib2-devel libXft-devel libXinerama-devel libexif-devel libinput-gestures mpv neofetch neovim vim wget xbanish xdotool xorg xsel zsh
+sudo xbps-install -Sy alsa-utils base-devel base-system curl dmenu feh firefox font-awesome font-inconsolata-otf giflib-devel git github-cli grub htop imlib2-devel libXft-devel libXinerama-devel libexif-devel libinput-gestures mpv neofetch neovim vim wget xbanish xdotool xorg xsel zathura zathura-pdf-poppler zsh
 
 # Copy config/* to $HOME/.config/
 [ ! -d $HOME/.config/ ] && mkdir $HOME/.config/
