--- a/install
+++ b/install
@@ -6,7 +6,7 @@ echo -e "AutoRiceVoidDesktopLinux\n<>  <>  <>\n<>  <>  <>\n<>  <>  <>"
 sudo xbps-install -Syu
 
 # Install packages I like
-sudo xbps-install -Sy alsa-utils base-devel base-system curl dmenu dunst emacs fd feh firefox font-awesome font-inconsolata-otf fzf giflib-devel git github-cli grub htop imlib2-devel jq lf libXft-devel libXinerama-devel libexif-devel libinput-gestures mpc mpd mpv ncmpcpp neofetch neovim picom ripgrep screenkey scrot sxhkd tty-clock ueberzug vim wget wifish xbanish xdg-utils xdotool xorg xsecurelock xsel youtube-dl zathura zathura-pdf-poppler zsh
+sudo xbps-install -Sy alsa-utils base-devel base-system curl dmenu dunst emacs fd feh ffmpeg firefox font-awesome font-inconsolata-otf fzf giflib-devel git github-cli grub htop imlib2-devel jq libXft-devel libXinerama-devel libexif-devel libinput-gestures mpc mpd mpv ncmpcpp neofetch neovim picom ranger ripgrep screenkey scrot sxhkd tty-clock ueberzug vim wget wifish xbanish xdg-utils xdotool xorg xsecurelock xsel youtube-dl zathura zathura-pdf-poppler zsh
 
 # Copy config/* to $HOME/.config/
 mkdir -p $HOME/.config/
@@ -14,9 +14,9 @@ cp -r ./config/* $HOME/.config/
 sudo mv $HOME/.config/zsh/.zshrc /root/
 sudo ln -s $HOME/.config/zsh/aliases /root/.aliases
 mkdir -p /root/.config/
-sudo ln -s $HOME/.config/nvim/ /root/.config/nvim
+sudo ln -s $HOME/.config/nvim/ /root/.config/nvim/
 
-# Sending files to specific locations
+# Creating Dirs and moving backgrounds
 mkdir -p    $HOME/files/ \
             $HOME/files/pictures/ \
             $HOME/files/pictures/screenshots/ \
